[package]
name = "blocklist"
version = "0.4.0"
edition = "2021"
build = "build.rs"
description = """
The project is based on blocklistproject. It provides perfect hash map/set structures for fast lookup of blocklisted items.
"""
documentation = "https://docs.rs/blocklist"
homepage = "https://github.com/pagescrape/blocklist"
license = "MIT"
repository = "https://github.com/pagescrape/blocklist"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fst = "0.4"
once_cell = "1"

[features]
default = [
    "abuse",
    "drugs",
    "fraud",
    "gambling",
    "malware",
    "phishing",
    "piracy",
    "porn",
    "ransomware",
    "redirect",
    "scam",
    "torrent",
    "tracking",
    "ads",
    "everything",
]
abuse = []
drugs = []
fraud = []
gambling = []
malware = []
phishing = []
piracy = []
porn = []
ransomware = []
redirect = []
scam = []
torrent = []
tracking = []
ads = []
everything = []

[build-dependencies]
fst = "0.4"

[build-dependencies.tokio]
version = "1"
default-features = false
features = ["rt-multi-thread", "macros"]

[build-dependencies.reqwest]
version = "0.13"
default-features = false
features = ["rustls", "gzip", "json"]
